// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckTableRow should match the snapshot 1`] = `
<SimpleTableRow__StyledTableRow>
  <TableCell
    redirect={false}
  >
    label
  </TableCell>
</SimpleTableRow__StyledTableRow>
`;

exports[`CheckTableRow should match the snapshot with values 1`] = `
<SimpleTableRow__StyledTableRow>
  <TableCell
    redirect={false}
  >
    label
  </TableCell>
  <TableCell
    key="0"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={true}
      labelPosition="LEFT"
    />
  </TableCell>
  <TableCell
    key="1"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={true}
      labelPosition="LEFT"
    />
  </TableCell>
  <TableCell
    key="2"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={false}
      labelPosition="LEFT"
    />
  </TableCell>
  <TableCell
    key="3"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={false}
      labelPosition="LEFT"
    />
  </TableCell>
  <TableCell
    key="4"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={false}
      labelPosition="LEFT"
    />
  </TableCell>
  <TableCell
    key="5"
    onClick={[Function]}
    redirect={false}
  >
    <Checkbox
      checked={false}
      labelPosition="LEFT"
    />
  </TableCell>
</SimpleTableRow__StyledTableRow>
`;
